[project]
name = ""
version = ""
description = ""
authors = [
    {name = "axect", email = "axect@outlook.kr"},
]
dependencies = [
    "torch>=2.0.1",
    "lightning>=2.0.6",
    "numpy>=1.25.2",
    "matplotlib>=3.7.2",
    "scipy>=1.9.3",
    "pandas>=2.0.3",
    "wandb>=0.15.8",
    "notebook>=7.0.2",
    "torchinfo>=1.8.0",
    "netCDF4>=1.6.4",
    "scienceplots>=2.1.0",
    "pyarrow>=12.0.1",
    "pyro-ppl>=1.8.6",
    "scikit-learn>=1.3.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

